syntax = "proto3";

package auth.user.account.api;

message AuthUserAccountApiPb {
    string login_id = 1;
    repeated string granted_roles = 2;
}

message SearchAuthUserAccountApiRequestPb {
    uint32 offset = 1;
    string sort_key = 2;
    string sort_order = 3;
    string login_id = 4;
}

message SearchAuthUserAccountApiResponsePb {
    uint32 offset = 1;
    uint32 limit = 2;
    uint32 all = 3;
    repeated AuthUserAccountApiPb users = 4;
}
